# ffmpeg_learn

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kyle/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  FFmpeg.cpp  FFmpeg.h  JvmCallHelper.cpp  JvmCallHelper.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h  utils.h
app/src/main/java/com/kyle/ffmpeg/: App.kt  MainActivity.kt  Player.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kyle/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
script/: build.sh
